# autd3-sdk

./: .gitignore  .gitmodules  Cargo.toml  about.hbs  about.toml  cliff.toml  deny.toml
bindings/ffi/: .gitignore  Cargo.toml
bindings/ffi/autd3-ffi/: Cargo.toml
bindings/ffi/autd3-ffi-abi/: Cargo.toml
bindings/ffi/autd3-ffi-abi/src/: lib.rs
bindings/ffi/autd3-ffi-core/: Cargo.toml
bindings/ffi/autd3-ffi-core/src/: lib.rs
bindings/ffi/autd3-ffi-link-ethercrab/: Cargo.toml
bindings/ffi/autd3-ffi-link-ethercrab/src/: lib.rs
bindings/ffi/autd3-ffi-link-nop/: Cargo.toml
bindings/ffi/autd3-ffi-link-nop/src/: lib.rs
bindings/ffi/autd3-ffi-link-remote/: Cargo.toml
bindings/ffi/autd3-ffi-link-remote/src/: lib.rs
bindings/ffi/autd3-ffi-link-soem/: Cargo.toml
bindings/ffi/autd3-ffi-link-soem/src/: lib.rs
bindings/ffi/autd3-ffi-link-twincat/: Cargo.toml
bindings/ffi/autd3-ffi-link-twincat/src/: lib.rs
bindings/ffi/autd3-ffi-modulation/: Cargo.toml
bindings/ffi/autd3-ffi-modulation/src/: lib.rs
bindings/ffi/autd3-ffi-pattern/: Cargo.toml
bindings/ffi/autd3-ffi-pattern-holo/: Cargo.toml
bindings/ffi/autd3-ffi-pattern-holo/src/: lib.rs
bindings/python/: .gitignore  Cargo.toml  README.md
bindings/python/autd3/: Cargo.toml  pyproject.toml
bindings/python/autd3-core/: Cargo.toml  pyproject.toml
bindings/python/autd3-link-ethercrab/: Cargo.toml  pyproject.toml
bindings/python/autd3-link-nop/: Cargo.toml  pyproject.toml
bindings/python/autd3-link-remote/: Cargo.toml  pyproject.toml
bindings/python/autd3-link-soem/: Cargo.toml  pyproject.toml
bindings/python/autd3-link-twincat/: Cargo.toml  pyproject.toml
bindings/python/autd3-modulation/: Cargo.toml  pyproject.toml
bindings/python/autd3-pattern/: Cargo.toml  pyproject.toml
bindings/python/autd3-pattern-holo/: Cargo.toml  pyproject.toml
bindings/python/autd3-python-capsule/: Cargo.toml
bindings/python/autd3/src/: lib.rs  (+7 more)
bindings/python/examples/: focus_sine.py  holo.py  low_latency.py  multi_device.py  send_modes.py  status_check.py  stm_circle.py
bindings/python/tests/: test_computation.py
console/: .gitignore  Cargo.toml  build.rs
console/src/: about.rs  app.rs  launch.rs  main.rs  process.rs
console/src/panel/: firmware.rs  mod.rs  simulator.rs  twincat.rs
crates/autd3-rs/: Cargo.toml
crates/autd3-rs-core/: Cargo.toml
crates/autd3-rs-core/src/: error.rs  lib.rs  params.rs
crates/autd3-rs-firmware-emulator/: .gitignore  Cargo.toml  build.rs
crates/autd3-rs-firmware-emulator/csrc/: emu_glue.c  emu_glue.h  wrapper.h
crates/autd3-rs-firmware-emulator/src/: audit.rs  device.rs  ffi.rs  lib.rs  nop.rs  port.rs
crates/autd3-rs-firmware-emulator/tests/: control.rs  foci.rs  pattern.rs  playback.rs  smoke.rs
crates/autd3-rs-gain-holo/: Cargo.toml
crates/autd3-rs-gain-holo/src/: amp.rs  backend.rs  constraint.rs  directivity.rs  lib.rs  propagation.rs
crates/autd3-rs-link-ethercrab/: Cargo.toml  build.rs
crates/autd3-rs-link-ethercrab/def/: Packet.def  wpcap.def
crates/autd3-rs-link-ethercrab/src/: diagnostics.rs  error.rs  lib.rs  link.rs  state_check.rs  status.rs  sync.rs  timer.rs  transport.rs  utils.rs  windows.rs
crates/autd3-rs-link-nop/: Cargo.toml
crates/autd3-rs-link-nop/src/: lib.rs
crates/autd3-rs-link-remote/: Cargo.toml
crates/autd3-rs-link-remote/src/: error.rs  lib.rs  link.rs  server.rs  wire.rs
crates/autd3-rs-link-remote/tests/: client_loopback.rs  factory_loopback.rs  loopback.rs
crates/autd3-rs-link-soem/: Cargo.toml  README.md  build.rs
crates/autd3-rs-link-soem/macos/: Darwin.cmake  nicdrv.c  nicdrv.h  osal.c
crates/autd3-rs-link-soem/src/: adapters.rs  bindings.rs  context.rs  diagnostics.rs  error.rs  lib.rs  link.rs  state.rs  state_check.rs  sync.rs  timer.rs
crates/autd3-rs-link-twincat/: Cargo.toml
crates/autd3-rs-link-twincat/src/: error.rs  lib.rs  link.rs  state_check.rs
crates/autd3-rs-modulation/: Cargo.toml
crates/autd3-rs-modulation/src/: constant.rs  fourier.rs  lib.rs  radiation_pressure.rs  sampling.rs  sampling_mode.rs  sine.rs  square.rs
crates/autd3-rs-pattern/: Cargo.toml
crates/autd3-rs-pattern/benches/: layout.rs
crates/autd3-rs-pattern/src/: bessel.rs  focus.rs  lib.rs  null.rs  plane.rs  uniform.rs  wavelength.rs
crates/autd3-rs/src/: commands.rs  datagram.rs  firmware_version.rs  fpga_state.rs  lib.rs  params.rs  response.rs  tuning.rs
emulator/: Cargo.toml
emulator/autd3-rs-emulator/: Cargo.toml
emulator/autd3-rs-emulator/src/: aabb.rs  client_api.rs  error.rs  lib.rs  output_ultrasound.rs  output_voltage.rs  range.rs  record.rs  recorder.rs
emulator/autd3-rs-emulator/tests/: drive.rs  range.rs  sound_field.rs
emulator/examples/: Cargo.toml  plot_field.py
emulator/examples/src/: plot.rs
examples/: Cargo.toml
simulator/: .gitignore  Cargo.toml
simulator/backend/: Cargo.toml
simulator/backend/src/: control.rs  emulator.rs  link.rs  main.rs  server.rs
simulator/frontend/: Cargo.toml  README.md  build.rs  package.json  tailwind.config.js
simulator/frontend/assets/: tailwind.css
simulator/frontend/src/: context.rs  main.rs  panels.rs  render.rs  scene.wgsl  settings.rs  tabs.rs
simulator/protocol/src/: lib.rs
tools/firmware/: Cargo.toml
tools/firmware/src/: list.rs  main.rs  util.rs  write.rs
tools/patternsoak/: Cargo.toml  README.md
tools/patternsoak/src/: cli.rs  main.rs  run.rs
tools/perftest/: Cargo.toml  README.md
tools/perftest/src/: cli.rs  main.rs  mem.rs  report.rs  run.rs  stats.rs
tools/simulator/: Cargo.toml
tools/simulator/frontend/: Cargo.toml  Dioxus.toml  README.md  package-lock.json
tools/simulator/protocol/: Cargo.toml
tools/simulator/src/: emulator.rs  link.rs  main.rs  server.rs
tools/synctune/: Cargo.toml
tools/synctune/src/: cli.rs  grid.rs  main.rs  monitor.rs  report.rs  run.rs
xtask/: Cargo.toml
xtask/src/: bump.rs  changelog.rs  component.rs  console.rs  cpu.rs  cs.rs  doc.rs  emulator.rs  example.rs  ffi.rs  firmware.rs  fpga.rs  license.rs  main.rs  py.rs  rust.rs  simulator.rs  tool.rs  util.rs  vendor.rs
(+640 files in other folders)
