[package]
name = "xtask"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
toml_edit = "0.25.12"
ureq = "3.3.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.56.0"

[workspace]

[lints.rust]
warnings = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
