[workspace]
resolver = "3"
members = [
    "autd3-ffi-abi",
    "autd3-ffi-core",
    "autd3-ffi",
    "autd3-ffi-pattern",
    "autd3-ffi-pattern-holo",
    "autd3-ffi-modulation",
    "autd3-ffi-link-ethercrab",
    "autd3-ffi-link-soem",
    "autd3-ffi-link-remote",
    "autd3-ffi-link-twincat",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "MIT"
authors = ["Shun Suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
repository = "https://github.com/shinolab/autd3-sdk"

[workspace.dependencies]
tokio = { version = "1.52.3", default-features = false, features = [
    "rt-multi-thread",
    "time",
] }
autd3-rs = { path = "../../crates/autd3-rs" }
autd3-rs-core = { path = "../../crates/autd3-rs-core" }
autd3-rs-pattern = { path = "../../crates/autd3-rs-pattern" }
autd3-rs-pattern-holo = { path = "../../crates/autd3-rs-pattern-holo" }
autd3-rs-modulation = { path = "../../crates/autd3-rs-modulation" }
autd3-rs-link-ethercrab = { path = "../../crates/autd3-rs-link-ethercrab" }
autd3-rs-link-soem = { path = "../../crates/autd3-rs-link-soem" }
autd3-rs-link-remote = { path = "../../crates/autd3-rs-link-remote" }
autd3-rs-link-twincat = { path = "../../crates/autd3-rs-link-twincat" }
autd3-ffi-abi = { path = "autd3-ffi-abi" }

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_precision_loss = "allow"
# The C ABI is documented in the generated headers / spec, not Rust docs; the
# implementer's reasoning is carried by inline SAFETY comments instead.
missing_safety_doc = "allow"
# Doc comments become C header text full of protocol acronyms (EtherCAT, SOEM, NIC).
doc_markdown = "allow"
