[package]
name = "autd3-rs-gain-holo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Multi-focus hologram optimization (Naive/GS/GSPAT) for autd3-rs."

[dependencies]
autd3-rs-core.workspace = true
nalgebra.workspace = true
rand.workspace = true
thiserror.workspace = true

[dev-dependencies]
approx.workspace = true
autd3-rs-pattern.workspace = true

[lints]
workspace = true
