[package]
name = "autd3-rs-link-ethercrab"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "EtherCrab-backed Link implementation for autd3-rs."

[dependencies]
autd3-rs-core.workspace = true
thiserror.workspace = true
ethercrab.workspace = true
futures-util.workspace = true
tokio = { workspace = true, features = ["sync", "time", "macros", "rt"] }
pcap = { version = "2.3.0", default-features = false }
tracing = { workspace = true, features = ["log"] }

[target.'cfg(target_os = "windows")'.dependencies]
thread-priority.workspace = true

[target.'cfg(target_os = "windows")'.build-dependencies]
cc = "1"

[dev-dependencies]
tokio = { workspace = true, features = [
    "sync",
    "time",
    "macros",
    "rt",
    "rt-multi-thread",
] }

[lints]
workspace = true
