[package]
name = "autd3-rs-link-nop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "No-op (hardware-free) Link for autd3-rs backed by the firmware emulator; used in examples, tests, and docs."

[dependencies]
autd3-rs-core.workspace = true
autd3-rs-firmware-emulator.workspace = true

[lints]
workspace = true
