[workspace]

[package]
name = "autd3-rs-simulator-frontend"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "MIT"
publish = false
description = "Browser frontend for the AUTD3 simulator"

[dependencies]
autd3-rs-simulator-protocol = { path = "../protocol" }
dioxus = { version = "0.7", features = ["web"] }
gloo-net = { version = "0.6", default-features = false, features = ["websocket"] }
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
futures-channel = { version = "0.3", default-features = false, features = [
    "std",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
console_error_panic_hook = "0.1"
wgpu = { version = "29", default-features = false, features = [
    "webgpu",
    "wgsl",
    "fragile-send-sync-non-atomic-wasm",
] }
bytemuck = { version = "1", features = ["derive"] }
glam = { version = "0.33", features = ["bytemuck"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-timers = { version = "0.3", features = ["futures"] }
web-sys = { version = "0.3", features = [
    "Window",
    "Location",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Storage",
] }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
struct_excessive_bools = "allow"
