[package]
name = "autd3-firmware"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CLI tool for flashing AUTD3 CPU/FPGA firmware (downloads released images and writes them via SEGGER J-Link / Xilinx Vivado)."

[[bin]]
name = "autd3-firmware"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
ureq = "3.3.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.56.0"

[lints]
workspace = true
