[package]
name = "autd3-rs-patternsoak"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false
description = "CLI tool that continuously sends WritePatternBuffer to soak-test the CPU board against frame-reception faults."

[[bin]]
name = "autd3-rs-patternsoak"
path = "src/main.rs"

[dependencies]
autd3-rs.workspace = true
autd3-rs-link-ethercrab.workspace = true
autd3-rs-link-soem.workspace = true
clap.workspace = true
humantime.workspace = true
anyhow.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["sync", "time", "macros", "rt", "rt-multi-thread", "signal"] }

[lints]
workspace = true
