[package]
name = "autd3-rs-simulator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Sound-field visualization simulator"

[[bin]]
name = "autd3-rs-simulator"
path = "src/main.rs"

[dependencies]
autd3-rs-core.workspace = true
autd3-rs-firmware-emulator.workspace = true
autd3-rs-link-remote.workspace = true
autd3-rs-simulator-protocol.workspace = true
async-trait.workspace = true
axum.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "net",
    "sync",
    "macros",
    "signal",
] }

[lints]
workspace = true
