[package]
name = "autd3-rs-synctune"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false
description = "CLI tool for measuring EtherCAT-link stability (OP-state retention) and auto-tuning sync0_period / sync0_shift."

[[bin]]
name = "autd3-rs-synctune"
path = "src/main.rs"

[dependencies]
autd3-rs.workspace = true
autd3-rs-link-ethercrab.workspace = true
autd3-rs-link-soem.workspace = true
clap.workspace = true
humantime.workspace = true
anyhow.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["sync", "time", "macros", "rt", "rt-multi-thread", "signal"] }

[lints]
workspace = true
