[package]
name = "autd3-ffi-link-ethercrab"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "C ABI bindings for autd3-rs-link-ethercrab (EtherCAT link via ethercrab)."

[lib]
name = "autd3_link_ethercrab"
crate-type = ["cdylib"]

[dependencies]
autd3-rs.workspace = true
autd3-rs-link-ethercrab.workspace = true
autd3-rs-core.workspace = true
autd3-ffi-abi = { workspace = true, features = ["client"] }
tokio.workspace = true

[lints]
workspace = true
